fix: 修复 Sonar 全量分析剩余的可靠性与安全问题 (#225)
- 修复消息查询空值短路后解引用的 NPE（S2259）
- 文件记录返回真实落库结果、祖级正则循环外编译并按字面量匹配、
  Collectors.toList 改 Stream.toList、移除无用 lambda 花括号
- 全部第三方与官方 GitHub Action 固定完整 commit SHA，防供应链漂移（S7637）
- deploy 工作流更名为 Deploy Server

Assisted-by: ZCode